--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.8",
-    "chart.js": "^4.4.9",
+    "chart.js": "^4.5.0",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
+    "vue-chart": "^2.0.0",
     "vue-chartjs": "^5.3.2",
     "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0"
