--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.8",
     "chart.js": "^4.5.0",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
     "vue-chart": "^2.0.0",
